--- a/figma-laravel/package.json
+++ b/figma-laravel/package.json
@@ -10,9 +10,21 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.18.6",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.10.5",
+        "@emotion/styled": "^11.10.5",
+        "@fontsource/roboto": "^4.5.8",
+        "@mui/icons-material": "^5.10.16",
+        "@mui/material": "^5.10.16",
+        "@mui/styled-engine-sc": "^5.10.16",
+        "styled-components": "^5.3.6"
     }
 }
